--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ android {
 }
 
 dependencies {
-
-
+    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
